minor spacing fix.

--- a/public/css/bagsintrees.css
+++ b/public/css/bagsintrees.css
@@ -210,6 +210,7 @@ h4 {
 }
 .navigation-mobile {
     margin-top:4px;
+    margin-right:4px;
     padding-top: 5px;
     color: #4D4834;
 }
